--- a/Homework/Klum_Austin_MTH415_Spring2020_HW_01.tex
+++ b/Homework/Klum_Austin_MTH415_Spring2020_HW_01.tex
@@ -118,11 +118,13 @@ Please include the statements of the problems in your HW submissions. For the Ex
 	\end{bmatrix} $. Notice, $ \phi(M) = y $ and $ \phi(N)=y $. But $ M \neq N $. Hence, $ \phi  $ is not injective. Thus, $ \phi $ is not bijective\\
 	Therefore, $ \phi $ is surjective, but not bijective.
 \end{proof}
-\item For each $n \in \mathbb{N}$ let $A_n := \{  (n+1)k ~|~ k \in \mathbb{N} \}$. 
+\item For each $n \in \mathbb{N}$ let $A_n := \{  (n+1)k ~|~ k \in \mathbb{N} \}$. Assuming $ 0\not\in\N  $.
 \begin{itemize}
     \item[(a)] What is $A_1 \cap A_2$? \\
-    $ A_1 \cap A_2 $ is 
-    \item[(b)] Determine the sets $\bigcup_{n \in \mathbb{N}} A_n$ and $\bigcap_{n \in \mathbb{N}} A_n$.
+    $ A_1 \cap A_2 $ is $ \{6k|k\in\N\} $
+    \item[(b)] Determine the sets $\bigcup_{n \in \mathbb{N}} A_n$ and $\bigcap_{n \in \mathbb{N}} A_n$.\\
+    $ \bigcup_{n\in\N}A_n $ is $ \N $ as every possible number will be generated their union will be the entire set $ \N $.\\
+    $ \bigcap_{n \in \mathbb{N}} A_n $ is $ \varnothing $ as there will always exist some value that doesn't exist in the other sets. \\
 \end{itemize}   
 
 %%%artificial pagebreak
